Fix notification icon on mobile

--- a/app/javascript/flavours/aether/styles/components/single_column.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column.scss
@@ -315,6 +315,10 @@
     -webkit-text-stroke: 1.8px var(--ui-highlight-color);
   }
 
+  .ui__mobile__footer__wrapper .icon-with-badge__badge {
+    -webkit-text-stroke: 0 transparent;
+  }
+
   .ui__mobile__footer__wrapper .column-link:hover,
   .ui__mobile__footer__wrapper .icon-button:hover {
     -webkit-text-stroke-color: transparent;
